--- a/index.html
+++ b/index.html
@@ -31,6 +31,14 @@ For more information, please refer to <https://unlicense.org>
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <meta http-equiv="refresh" content="0; url=articles/articles.html"/>
+        
+        <!-- OpenGraph -->
+        <meta name="og:title" content="Articles"/>
+        <meta name="og:description" content="Articles Page"/>
+        <meta name="og:type" content="website"/>
+        <meta name="og:image" content="resources/icon.png"/>
+        <!-- OpenGraph -->
+        
         <script>
             // <![CDATA[
             window.location.href = "articles/articles.html";
