--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ For more information, please refer to <https://unlicense.org>
         
         <!-- OpenGraph -->
         <meta name="og:title" content="Articles"/>
-        <meta name="og:description" content="Articles Page"/>
+        <meta name="og:description" content="Articles"/>
         <meta name="og:type" content="website"/>
         <meta name="og:image" content="resources/icon.png"/>
         <!-- OpenGraph -->
