Localization integration done

--- a/index.html
+++ b/index.html
@@ -23,14 +23,21 @@ OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE,
 ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR
 OTHER DEALINGS IN THE SOFTWARE.
 
-For more information, please refer to <https://unlicense.org>
+For more information, please refer to <http://unlicense.org/>
+
+Redirect Page:
+    To: articles/articles_en-US.html
+    Title: Articles
+    Description: Articles
+
+Sun Sep 08 16:53:51 BRT 2024
 -->
-<html>
+<html lang="en-US">
     <head>
-        <title>Redirecting to Articles</title>
+        <title>Articles</title>
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-        <meta http-equiv="refresh" content="0; url=articles/articles.html"/>
+        <meta http-equiv="refresh" content="0; url=articles/articles_en-US.html"/>
         
         <!-- OpenGraph -->
         <meta name="og:title" content="Articles"/>
@@ -41,11 +48,11 @@ For more information, please refer to <https://unlicense.org>
         
         <script>
             // <![CDATA[
-            window.location.href = "articles/articles.html";
+            window.location.href = "articles/articles_en-US.html";
             // ]]>
         </script>
     </head>
     <body>
-        <p><a href="articles/articles.html">articles/articles.html</a></p>
+        <p><a href="articles/articles_en-US.html">articles/articles_en-US.html</a></p>
     </body>
 </html>
