--- a/index.html
+++ b/index.html
@@ -26,18 +26,18 @@ OTHER DEALINGS IN THE SOFTWARE.
 For more information, please refer to <http://unlicense.org/>
 
 Redirect Page:
-    To: articles/articles_en-US.html
+    To: articles/articles_en-us.html
     Title: Articles
     Description: Articles
 
-Sun Sep 08 16:53:51 BRT 2024
+Sun Sep 08 23:56:51 BRT 2024
 -->
-<html lang="en-US">
+<html lang="en-us">
     <head>
         <title>Articles</title>
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-        <meta http-equiv="refresh" content="0; url=articles/articles_en-US.html"/>
+        <meta http-equiv="refresh" content="0; url=articles/articles_en-us.html"/>
         
         <!-- OpenGraph -->
         <meta name="og:title" content="Articles"/>
@@ -48,11 +48,11 @@ Sun Sep 08 16:53:51 BRT 2024
         
         <script>
             // <![CDATA[
-            window.location.href = "articles/articles_en-US.html";
+            window.location.href = "articles/articles_en-us.html";
             // ]]>
         </script>
     </head>
     <body>
-        <p><a href="articles/articles_en-US.html">articles/articles_en-US.html</a></p>
+        <p><a href="articles/articles_en-us.html">articles/articles_en-us.html</a></p>
     </body>
 </html>
