Testing strict XHTML

--- a/0_en-us.xhtml
+++ b/0_en-us.xhtml
@@ -32,9 +32,9 @@ en-us
     0
     No Date
 
-Fri Sep 13 10:56:04 BRT 2024
+Fri Sep 13 10:44:36 BRT 2024
 -->
-<html lang="en-us">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en-us">
     <head>
         <title>No Title</title>
         
@@ -232,15 +232,6 @@ Fri Sep 13 10:56:04 BRT 2024
         </main>
         <footer class="footer">
             <p><a href="articles_en-us.html">&lt;&lt;&lt; Return to Articles</a></p>
-            <script src="https://utteranc.es/client.js"
-                    repo="CientistaVuador/cientistavuador.github.io"
-                    issue-term="Article 0"
-                    label="comments"
-                    theme="github-dark"
-                    crossorigin="anonymous"
-                    async="async"
-                    >
-            </script>
             <p>The license of this page can be found in the source code or in the <a target="_blank" href="https://github.com/CientistaVuador/cientistavuador.github.io">github repository</a>.</p>
         </footer>
     </body>
