--- a/0_en-us.xhtml
+++ b/0_en-us.xhtml
@@ -44,8 +44,8 @@ Fri Sep 13 10:44:36 BRT 2024
         <meta name="description" content="No Description"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         
-        <link rel="icon" type="image/x-icon" href="../data/icon.png"/>
-        <link rel="stylesheet" href="../data/style.css" type="text/css"/>
+        <link rel="icon" type="image/x-icon" href="data/icon.png"/>
+        <link rel="stylesheet" href="data/style.css" type="text/css"/>
         <!-- HTML Meta Tags -->
         
         <!-- OpenGraph -->
