Created a new article

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         
         <!-- HTML Meta Tags -->
         <meta charset="UTF-8"/>
-        <meta name="keywords" content="com, hi, very, been, mostly, projects, physicsexperiment, software, cubemaps, own, about, shooting, project, areas, years, without, quotes, that, 3d, worked, java, leitecraft, contact, reddit, me, block, https, id, usually, if, you, programming, bakedraytracinglighting, ciencraftagoraehreal, github, development, in, made, this, is, it, cienn017, my, softwarerenderer, discord, know, newrenderingpipeline, game, don, asteroidshooter, are, and, of, physics, steam, email, was, also, say, instead, the, with, cientistavuador, voxel"/>
+        <meta name="keywords" content="very, been, mostly, software, bad, vary, cubemaps, shooting, adaptation, areas, years, without, quotes, these, worked, fix, block, id, usually, calculate, if, height, using, asteroids, going, pass, old, double, remain, testing, expected, come, rendering, them, inspired, easy, javascript, something, as, scammer, looking, must, gmail, other, functional, renderer, lightmaps, parallax, skeletal, pascal, dot, ambient, sum, diffusecolor, remember, steamcommunity, computer, same, web, by, have, pow, wikipedia, modifications"/>
         <meta name="description" content="Articles"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <link rel="icon" type="image/x-icon" href="/data/icon.png"/>
