--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         
         <!-- HTML Meta Tags -->
         <meta charset="UTF-8"/>
-        <meta name="keywords" content="very, been, mostly, software, references, depend, bad, vary, cubemaps, allowed, gigabytes, shooting, adaptation, areas, ambiguous, years, quotes, quoted, these, worked, character, quote, fix, block, id, usually, because, calculate, if, they, fully, height, using, github, sure, asteroids, bundled, going, preprocessing, edit, pass, old, double, testing, expected, come, rendering, require, inspired, an, easy, javascript, each, something, extend, as, eliminates, at, meta, unique, scammer, alternatives, looking, must"/>
+        <meta name="keywords" content="very, been, mostly, software, references, depend, bad, vary, cubemaps, gigabytes, shooting, adaptation, areas, ambiguous, years, quotes, quoted, these, worked, character, quote, fix, block, id, usually, because, calculate, if, they, fully, height, using, github, sure, asteroids, bundled, going, preprocessing, edit, pass, old, double, testing, expected, come, rendering, require, inspired, an, easy, javascript, each, something, extend, as, eliminates, at, meta, unique, scammer, alternatives, looking, must, gmail"/>
         <meta name="description" content="Articles"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <link rel="icon" type="image/x-icon" href="/data/icon.png"/>
