--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         
         <!-- HTML Meta Tags -->
         <meta charset="UTF-8"/>
-        <meta name="keywords" content="very, been, mostly, software, references, depend, bad, vary, cubemaps, gigabytes, shooting, adaptation, areas, ambiguous, years, quotes, quoted, these, worked, character, fix, block, id, usually, because, calculate, if, they, fully, height, using, github, sure, asteroids, bundled, going, preprocessing, edit, pass, old, double, testing, myself, expected, come, rendering, require, inspired, am, an, easy, javascript, each, something, extend, as, eliminates, at, meta, unique, scammer, alternatives, looking, must"/>
+        <meta name="keywords" content="been, mostly, references, depend, bad, specularfactor, vary, cubemaps, gigabytes, shift, shooting, adaptation, areas, ambiguous, resolution, quotes, scene, shininess, quoted, worked, bar, reflect, character, fix, because, calculate, they, fully, height, using, seamless, github, sure, asteroids, bundled, going, preprocessing, edit, pass, old, sampling, myself, expected, require, inspired, lighting, am, an, easy, javascript, each, something, extend, as, plastic, eliminates, at, meta, unique, scammer, alternatives, functional, renderer, components"/>
         <meta name="description" content="Articles"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <link rel="icon" type="image/x-icon" href="/data/icon.png"/>
