--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         
         <!-- HTML Meta Tags -->
         <meta charset="UTF-8"/>
-        <meta name="keywords" content="been, mostly, references, depend, bad, specularfactor, vary, cubemaps, gigabytes, shift, shooting, adaptation, areas, ambiguous, resolution, quotes, scene, shininess, quoted, worked, bar, reflect, character, fix, because, calculate, they, fully, height, using, seamless, github, sure, asteroids, bundled, going, preprocessing, edit, pass, old, sampling, myself, expected, require, inspired, lighting, am, an, easy, javascript, each, something, extend, as, plastic, eliminates, at, meta, unique, scammer, alternatives, functional, renderer, components"/>
+        <meta name="keywords" content="been, mostly, functions, references, depend, specularfactor, vary, cubemaps, gigabytes, shift, shooting, adaptation, areas, your, ambiguous, resolution, quotes, scene, quoted, worked, bar, reflect, character, fix, english, let, because, calculate, they, fully, height, using, seamless, github, sure, asteroids, bundled, preprocessing, edit, pass, old, want, sampling, myself, expected, opposite, require, inspired, lighting, am, an, easy, javascript, each, extend, as, plastic, meta, unique, scammer, alternatives, calculations, much, functional"/>
         <meta name="description" content="Articles"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <link rel="icon" type="image/x-icon" href="/data/icon.png"/>
