--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         
         <!-- HTML Meta Tags -->
         <meta charset="UTF-8"/>
-        <meta name="keywords" content="been, mostly, functions, references, depend, specularfactor, vary, cubemaps, gigabytes, shift, shooting, adaptation, areas, your, ambiguous, resolution, quotes, scene, quoted, worked, bar, reflect, character, fix, english, let, because, calculate, they, fully, height, using, seamless, github, sure, asteroids, bundled, preprocessing, edit, pass, old, want, sampling, myself, expected, opposite, require, inspired, lighting, am, an, easy, javascript, each, extend, as, plastic, at, meta, unique, scammer, alternatives, calculations, much"/>
+        <meta name="keywords" content="extent, been, functions, references, seblagarde, specularfactor, vary, cubemaps, gigabytes, shift, shooting, paint, adaptation, areas, scenarios, your, ambiguous, resolution, quotes, scene, quoted, worked, bar, reflect, character, fix, english, because, calculate, moving, cubemapposition, they, fully, height, using, seamless, github, sure, asteroids, bundled, preprocessing, edit, pass, old, want, sampling, myself, expected, opposite, require, lighting, am, version, an, easy, javascript, each, extend, extensions, plastic, at, slow, quaternion, meta"/>
         <meta name="description" content="Articles"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <link rel="icon" type="image/x-icon" href="/data/icon.png"/>
